Update middleware to new pattern

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "devDependencies": {
     "jest": "^18.1.0",
     "rimraf": "^2.5.4",
-    "servie": "0.0.5",
+    "servie": "^0.1.1",
     "throwback": "^2.0.0",
     "tslint": "^4.3.1",
     "tslint-config-standard": "^2.0.0",
@@ -50,7 +50,7 @@
     "typings": "^2.1.0"
   },
   "peerDependencies": {
-    "servie": "^0.0.3"
+    "servie": "^0.1.0"
   },
   "dependencies": {
     "debug": "^2.6.0",
