--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "dist/"
   ],
   "scripts": {
-    "lint": "tslint \"src/**/*.ts\"",
+    "lint": "tslint \"src/**/*.ts\" --project tsconfig.json",
     "build": "rm -rf dist/ && tsc",
     "specs": "jest --coverage",
     "test": "npm run -s lint && npm run -s build && npm run -s specs",
-    "prepublish": "typings install && npm run build"
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -40,20 +40,24 @@
   },
   "homepage": "https://github.com/serviejs/servie-route",
   "devDependencies": {
-    "jest": "^19.0.0",
+    "@types/debug": "0.0.30",
+    "@types/jest": "^22.2.3",
+    "@types/node": "^9.6.6",
+    "jest": "^22.4.3",
     "rimraf": "^2.5.4",
-    "servie": "^0.2.0",
+    "servie": "^3.0.0",
+    "servie-finalhandler": "^1.1.0",
+    "servie-send": "^1.1.0",
     "throwback": "^2.0.0",
-    "tslint": "^5.0.0",
-    "tslint-config-standard": "^4.0.0",
-    "typescript": "^2.2.1",
-    "typings": "^2.1.0"
+    "tslint": "^5.9.1",
+    "tslint-config-standard": "^7.0.0",
+    "typescript": "^2.8.3"
   },
   "peerDependencies": {
-    "servie": "^0.2.0"
+    "servie": ">=1"
   },
   "dependencies": {
-    "debug": "^2.6.0",
-    "path-to-regexp": "^1.7.0"
+    "debug": "^3.1.0",
+    "path-to-regexp": "^2.2.0"
   }
 }
