--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es2015",
     "lib": [
       "es2015"
     ],
@@ -8,18 +8,9 @@
     "outDir": "dist",
     "module": "commonjs",
     "moduleResolution": "node",
+    "strict": true,
     "declaration": true,
-    "noImplicitAny": true,
-    "noImplicitThis": true,
-    "noImplicitReturns": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "removeComments": false,
     "sourceMap": true,
     "inlineSources": true
-  },
-  "include": [
-    "src/**/*",
-    "typings/**/*"
-  ]
+  }
 }
